--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="bg-light p-0 m-0 w-100 d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
-        <input class="upload-photo-input" style="visibility:hidden;" type="file" accept="image/*" capture="camera">
+        <input class="upload-photo-input"  type="file" accept="image/*" capture="camera">
         <button class="btn btn-primary bg-gradient btn-photo">Сделать фото</button>
         <div class="text-container mt-3"></div>
     </div>
