Стилизация input type=file с помощью jquery плагина

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="./assets/css/style.css" rel="stylesheet" >
     <script defer src="./assets/libs/bootstrap/bootstrap.bundle.min.js"></script>
     <script defer src="./assets/libs/jquery/jquery.min.js"></script>
+    <script defer src="./assets/libs/jquery/fileinput.js"></script>
     <script defer src="./assets/js/index.js"></script>
     
     <title>Тестовая кнопка по загрузке фото с камеры</title>
@@ -15,7 +16,7 @@
 <body class="bg-light p-0 m-0 w-100 d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
         <input class="upload-photo-input"  type="file" accept="image/*" capture="camera">
-        <button class="btn btn-primary bg-gradient btn-photo">Сделать фото</button>
+        <!-- <button class="btn btn-primary bg-gradient btn-photo">Сделать фото</button> -->
         <div class="text-container mt-3"></div>
     </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
